extend proteasome text (related to figure 4)

--- a/text/references.bib
+++ b/text/references.bib
@@ -387,3 +387,27 @@
    pmid = {32581361},
    doi = {10.1038/s41586-020-2435-1}
 }
+
+@article{proteasome_review_Jang,
+  author = {Jang, H.H.},
+  title = {Regulation of Protein Degradation by Proteasomes in Cancer},
+  journal = {Journal of Cancer Prevention},
+  year = {2018},
+  volume = {23},
+  number = {4},
+  pages = {153--161},
+  pmid = {30671397},
+  doi = {10.15430/JCP.2018.23.4.153}
+}
+
+@article{protein_atlas
+  author = {Uhlén, M. and Fagerberg, L. and Hallström, B.M. and Lindskog, C. and Oksvold, P. and Mardinoglu, A. and Sivertsson, Å. and Kampf, C. and Sjöstedt, E. and Asplund, A. and Olsson, I. and Edlund, K. and Lundberg, E. and Navani, S. and Szigyarto, and C.A. and Odeberg, J. and Djureinovic, D. and Takanen, J.O. and Hober, S. and Alm, T. and Edqvist, P.H. and Berling, H. and Tegel, H. and Mulder, J. and Rockberg, J. and Nilsson, P. and Schwenk, J.M. and Hamsten, M. and {von Feilitzen}, K. and Forsberg, M. and Persson, L. and Johansson, F. and Zwahlen, M. and {von Heijne}, G. and Nielsen, J. and Pontén, F.},
+  title = {Tissue-based map of the human proteome},
+  journal = {Science},
+  year = 2015,
+  volume = {347},
+  issue = {6220},
+  number = {1260419},
+  pmid = {25613900},
+  doi = {10.1126/science.1260419}
+}
